--- a/.github/workflows/smokeshow.yml
+++ b/.github/workflows/smokeshow.yml
@@ -1,35 +1,83 @@
 name: Smokeshow
 
 on:
-  workflow_run:
-    workflows: [Test Backend]
-    types: [completed]
+  push:
+    branches:
+      - master
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
-  smokeshow:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+  test-backend:
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Prepare .env for CI
+        run: cp .env.example .env
+
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.10"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          version: "0.4.15"
+          enable-cache: true
+
+      - run: docker compose down -v --remove-orphans
+      - run: docker compose up -d db mailcatcher
+
+      - name: Migrate DB
+        run: uv run bash scripts/prestart.sh
+        working-directory: backend
+
+      - name: Run tests
+        run: uv run bash scripts/tests-start.sh "Coverage for ${{ github.sha }}"
+        working-directory: backend
+
+      - run: docker compose down -v --remove-orphans
+
+      - name: Store coverage files
+        uses: actions/upload-artifact@v5
+        with:
+          name: coverage-html
+          path: backend/htmlcov
+          include-hidden-files: true
+
+  smokeshow:
+    needs: test-backend
+    if: success()
+    runs-on: ubuntu-latest
+
     permissions:
-      actions: read
       statuses: write
 
     steps:
       - uses: actions/checkout@v6
+
       - uses: actions/setup-python@v6
         with:
           python-version: "3.10"
+
       - run: pip install smokeshow
+
       - uses: actions/download-artifact@v6
         with:
           name: coverage-html
           path: backend/htmlcov
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          run-id: ${{ github.event.workflow_run.id }}
+
       - run: smokeshow upload backend/htmlcov
         env:
           SMOKESHOW_GITHUB_STATUS_DESCRIPTION: Coverage {coverage-percentage}
           SMOKESHOW_GITHUB_COVERAGE_THRESHOLD: 90
           SMOKESHOW_GITHUB_CONTEXT: coverage
           SMOKESHOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.event.workflow_run.head_sha }}
+          SMOKESHOW_GITHUB_PR_HEAD_SHA: ${{ github.sha }}
           SMOKESHOW_AUTH_KEY: ${{ secrets.SMOKESHOW_AUTH_KEY }}
